# AutoForge

./: .ai-catalog-mapping.json  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  Dockerfile.dashboard  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  run.sh  test_autoforge.sh
.github/workflows/: ci.yml
.gitlab/duo/: agent-config.yml
agents/: greenops_agent.yml  security_agent.yml  sre_agent.yml
backend/: __init__.py  alembic.ini  config.py  logging_config.py  main.py  requirements-full.txt  requirements.txt  worker.py
backend/agents/: __init__.py  base_agent.py  reasoning_engine.py
backend/agents/docs/: __init__.py  agent.py
backend/agents/greenops/: __init__.py  agent.py
backend/agents/qa/: __init__.py  agent.py
backend/agents/review/: __init__.py  agent.py
backend/agents/security/: __init__.py  agent.py
backend/agents/sre/: __init__.py  agent.py  prompts.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/api/: __init__.py  agents.py  approvals.py  auth.py  dashboard.py  explain.py  router.py  telemetry.py  webhooks.py  websocket.py  workflows.py
backend/brain/: __init__.py  conflict_resolver.py  orchestrator.py  policy_engine.py  router.py  state_manager.py  task_decomposer.py
backend/db/: __init__.py  engine.py  redis_cache.py  repository.py  tables.py  vector_store.py
backend/demo/: __init__.py  engine.py
backend/integrations/: __init__.py  event_normalizer.py  gitlab_client.py
backend/integrations/gitlab/: __init__.py  auth.py  commits.py  demo_mode.py  event_normalizer.py  gitlab_client.py  merge_requests.py  models.py  pipelines.py  rate_limiter.py  repository.py  retry_handler.py  security.py  webhooks.py
backend/memory/: __init__.py  store.py
backend/middleware/: __init__.py  auth.py  correlation.py  rate_limiter.py
backend/models/: __init__.py  agents.py  api_schemas.py  events.py  workflows.py
backend/telemetry/: __init__.py  collector.py  tracing.py
backend/tests/: __init__.py  test_api.py  test_audit_gap_implementations.py  test_audit_improvements.py  test_core.py  test_dashboard_demo.py  test_enterprise_improvements.py  test_full_implementation.py  test_integration_layer.py  test_production_readiness.py
backend/tools/: __init__.py  gitlab_tools.py  tool_gateway.py
backend/workflows/: __init__.py  merge_request.py  pipeline_failure.py  security_alert.py
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/activity/: ActivityFeed.tsx
dashboard/src/components/agents/: AgentCommGraph.tsx  AgentGrid.tsx
dashboard/src/components/auth/: AuthProvider.tsx  LoginScreen.tsx
dashboard/src/components/charts/: LearningCurveChart.tsx  MetricsCharts.tsx
dashboard/src/components/demo/: DemoTrigger.tsx
dashboard/src/components/metrics/: MISBreakdown.tsx  MetaScore.tsx
dashboard/src/components/reasoning/: ReasoningTree.tsx
dashboard/src/hooks/: usePolling.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  utils.ts
demo_scenarios/: inefficient_pipeline.json  merge_request_opened.json  pipeline_failure_missing_dep.json  security_vulnerability.json
docs/: DEMO_VIDEO_SCRIPT.md  DEVPOST_SUBMISSION.md
docs/architecture/: AGENT_INTERACTIONS.md  ARCHITECTURE.md  MEMORY_LEARNING.md
docs/prompts/: README.md
flows/: greenops_flow.yml  security_flow.yml  sre_flow.yml
gitlab_duo/: README.md
gitlab_duo/agents/: greenops_agent_prompt.md  security_agent_prompt.md  sre_agent_prompt.md
gitlab_duo/flows/: autoforge_greenops_flow.yaml  autoforge_security_flow.yaml  autoforge_sre_flow.yaml
infra/terraform/: main.tf  production.tfvars  staging.tfvars
prompts/: agents.yaml  loader.py
(+9 files in other folders)
